--- a/src/app/modules/wallet/v2/settings-btc/settings-btc.component.html
+++ b/src/app/modules/wallet/v2/settings-btc/settings-btc.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="!loaded" class="m-wallet__spinner">
+<div *ngIf="!init" class="m-wallet__spinner">
   <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
 </div>
-<div class="m-walletSettings" *ngIf="loaded">
+<div class="m-walletSettings" *ngIf="init">
   <!-- -------------------------------------------- -->
   <!--- ADDRESS - SETUP - ---------------------------->
   <!-- -------------------------------------------- -->
