--- a/src/app/modules/wallet/v2/dashboard.component.scss
+++ b/src/app/modules/wallet/v2/dashboard.component.scss
@@ -11,7 +11,7 @@ m-walletDashboard {
 
   m-shadowboxSubmitButton {
     box-sizing: border-box;
-    display: block;
+    display: inline-block;
 
     .m-shadowboxSubmitButton {
       box-sizing: border-box;
@@ -86,7 +86,6 @@ m-walletDashboard {
     }
     &[class*='--backButton'] {
       margin-top: 40px;
-      font-weight: 300;
       display: inline-flex;
       flex-flow: row nowrap;
       align-items: baseline;
@@ -192,7 +191,6 @@ m-walletDashboard {
   ////////////////////////////////////////////
   // VIEW TABS ///////////////////////////////
   ////////////////////////////////////////////
-
   .m-walletDashboardViews__tabsContainer {
     box-sizing: border-box;
     display: flex;
@@ -298,25 +296,45 @@ m-walletDashboard {
       .m-walletForm__row--input {
         flex-flow: row nowrap;
       }
+      label,
+      input:not(.m-phoneInput__input),
+      minds-country-input,
+      m-phoneInput,
+      .m-walletForm__row--validation {
+        flex: 1 1 calc(100% - 160px);
+        min-width: calc(100% - 160px);
+        max-width: calc(100% - 160px);
+        @media screen and (max-width: $max-mobile) {
+          flex: 1 1 100%;
+          min-width: 100%;
+          max-width: 100%;
+        }
+      }
+      // @media screen and (max-width: $max-mobile) {
+      //   .m-phoneInput__input {
+      //     min-width: 0;
+      //   }
+      // }
+
+      // @media screen and (max-width: 500px) {
+      //   [class*='m-walletForm__row'] {
+      //     flex-flow: row wrap;
+      //     label,
+      //     input,
+      //     minds-country-input {
+      //       flex: 1 1 100%;
+      //       min-width: 100%;
+      //       max-width: 100%;
+      //     }
+      //     .m-phoneInput__input {
+      //       min-width: 0;
+      //     }
+      //   }
+      // }
+
       .m-walletForm__row--validation {
         justify-content: flex-end;
         align-self: unset;
-      }
-
-      label,
-      input,
-      .m-walletForm__row--validation {
-        flex: 1 1 calc(100% - 160px);
-        max-width: calc(100% - 160px);
-        @media screen and (max-width: $max-mobile) {
-          label,
-          input,
-          .m-walletForm__row--validation {
-            flex: 1 1 100%;
-            min-width: 100%;
-            max-width: 100%;
-          }
-        }
       }
     }
     .m-walletForm__fieldsContainer {
@@ -351,9 +369,28 @@ m-walletDashboard {
     }
   }
 
+  .m-walletForm__fieldGroupWrapper {
+    margin-top: 58px;
+  }
+
   .m-walletForm__fieldsContainer {
     flex: 1 1 auto;
   }
+
+  // Used for first/last name inputs
+  // .m-walletForm__fieldPairWrapper {
+  //   display: flex;
+  //   box-sizing: border-box;
+  //   flex-flow: row wrap;
+
+  //   [class*='m-walletForm__field'] {
+  //     flex: 1 0 auto;
+  //     min-width: 300px;
+  //     &:first-child {
+  //       margin-right: 19px;
+  //     }
+  //   }
+  // }
 
   .m-walletForm__buttonsContainer {
     display: flex;
@@ -363,7 +400,7 @@ m-walletDashboard {
       width: 100%;
     }
     m-shadowboxSubmitButton {
-      margin: 8px 0 18px 0;
+      margin: 8px 0 0 18px;
 
       @media screen and (max-width: $max-mobile) {
         width: 100%;
@@ -462,11 +499,12 @@ m-walletDashboard {
     cursor: text;
 
     @include m-theme() {
-      color: themed($m-grey-800);
+      color: themed($m-textColor--primary);
     }
   }
   input:not(.m-phoneInput__input),
-  .m-phoneInput__wrapper {
+  .m-phoneInput__wrapper,
+  minds-country-input select {
     border-radius: 2px;
     @include m-theme() {
       box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
@@ -487,6 +525,16 @@ m-walletDashboard {
       width: 100%;
       min-width: 240px;
     }
+    .m-phoneInput__dialCode {
+      font-weight: 300;
+    }
+    .m-phoneInput__input {
+      font-size: 15px;
+      line-height: 20px;
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
+    }
   }
 
   .m-walletForm__field--checkbox {
@@ -500,31 +548,78 @@ m-walletDashboard {
       }
     }
   }
-  //////////////////////////////////////////
-  @media screen and (max-width: 500px) {
-    // m-shadowboxSubmitButton {
-    //   margin: 21px 0 0 0;
-    // }
-    .stretchedField {
-      // .m-walletForm__row--label m-tooltip {
-      //   .m-tooltip--bubble {
-      //     right: 12px;
-      //   }
-      // }
-      [class*='m-walletForm__row'] {
-        flex-flow: row wrap;
-        label,
-        input {
-          flex: 1 1 100%;
-          min-width: 100%;
-          max-width: 100%;
-        }
-        .m-phoneInput__input {
-          min-width: 0;
-        }
+
+  minds-country-input {
+    select {
+      outline: 0;
+      min-height: 42px;
+      padding: 10px 20px;
+      border-radius: 2px;
+      font-size: 15px;
+      line-height: 20px;
+      font-weight: 300;
+      @include m-theme() {
+        background-color: themed($m-white);
+        color: themed($m-textColor--primary);
+      }
+    }
+    &::before {
+      margin: 3px 4px 0 0;
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
       }
     }
   }
+
+  m-date__dropdowns {
+    .m-dateDropdowns__selectWrapper {
+      &:nth-child(1) {
+        min-width: 136px;
+        @media screen and (max-width: $max-mobile) {
+          min-width: 126px;
+        }
+      }
+      &:nth-child(2) {
+        min-width: 69px;
+        @media screen and (max-width: $max-mobile) {
+          min-width: 59px;
+        }
+      }
+      &:nth-child(3) {
+        min-width: 94px;
+        @media screen and (max-width: $max-mobile) {
+          min-width: 84px;
+        }
+      }
+      &::after {
+        margin: 3px 2px 0 0;
+        @include m-theme() {
+          color: themed($m-textColor--tertiary);
+        }
+      }
+    }
+
+    select {
+      outline: 0;
+      font-weight: 300;
+      height: 42px;
+      padding: 10px 20px;
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+        border: 1px solid themed($m-borderColor--primary);
+        box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
+      }
+      &:focus {
+        @include m-theme() {
+          border: 1px solid themed($m-blue);
+        }
+      }
+      @media screen and (max-width: $max-mobile) {
+        padding: 10px;
+      }
+    }
+  }
+
   ////////////////////////////////////////////
   // SETTINGS ////////////////////////////////
   ////////////////////////////////////////////
