--- a/src/app/modules/wallet/v2/settings-cash/settings-cash.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/settings-cash.component.html
@@ -1,30 +1,33 @@
-<div *ngIf="inProgress || !init" class="m-wallet__spinner">
-  <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
-</div>
-<div class="m-walletSettings" *ngIf="!inProgress && init">
+<div class="m-walletSettings">
   <h2>Bank Information</h2>
-  <!-- ONBOARDING FORM ------------------ -->
-  <m-walletCashOnboarding
-    *ngIf="view === 'onboarding'"
-    [allowedCountries]="allowedCountries"
-    (submitted)="setView()"
-  ></m-walletCashOnboarding>
-  <!-- BANK FORM ----------------------- -->
-  <m-walletCashBankForm
-    *ngIf="view === 'bank'"
-    [account]="account"
-    [allowedCountries]="allowedCountries"
-    (submitted)="setView()"
-  ></m-walletCashBankForm>
-  <!-- EXTRA REQUIREMENTS FORM ----------- -->
-  <m-walletCashOnboardingExtras
-    *ngIf="view === 'extras'"
-    [account]="account"
-    [allowedCountries]="allowedCountries"
-    (submitted)="setView()"
-  ></m-walletCashOnboardingExtras>
-  <!-- ERROR ----------------------------- -->
-  <p *ngIf="view === 'error'" class="m-walletTertiaryText--error">
-    {{ error }}
-  </p>
+  <div *ngIf="inProgress" class="m-wallet__spinner">
+    <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+  </div>
+  <ng-container *ngIf="!inProgress">
+    <!-- ONBOARDING FORM ------------------ -->
+    <m-walletCashOnboarding
+      *ngIf="view === 'onboarding'"
+      [allowedCountries]="allowedCountries"
+      (submitted)="setView()"
+    ></m-walletCashOnboarding>
+    <!-- BANK FORM ----------------------- -->
+    <m-walletCashBankForm
+      *ngIf="view === 'bank' && account"
+      [hasBank]="cashWallet.stripeDetails.hasBank"
+      [account]="account"
+      [allowedCountries]="allowedCountries"
+      (submitted)="setView()"
+    ></m-walletCashBankForm>
+    <!-- EXTRA REQUIREMENTS FORM ----------- -->
+    <m-walletCashOnboardingExtras
+      *ngIf="view === 'extras' && account"
+      [account]="account"
+      [allowedCountries]="allowedCountries"
+      (submitted)="setView()"
+    ></m-walletCashOnboardingExtras>
+    <!-- ERROR ----------------------------- -->
+    <p *ngIf="view === 'error'" class="m-walletTertiaryText--error">
+      {{ error }}
+    </p>
+  </ng-container>
 </div>
