--- a/src/app/modules/wallet/v2/chart/chart.component.html
+++ b/src/app/modules/wallet/v2/chart/chart.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!inProgress && dashboard">
+<!-- <ng-container *ngIf="!inProgress && dashboard">
   <m-timespanFilter
     [timespans]="dashboard.timespans"
     [activeTimespanId]="activeTimespan.id"
@@ -14,4 +14,4 @@
 </ng-container>
 <div *ngIf="inProgress || !dashboard" class="m-wallet__spinner">
   <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
-</div>
+</div> -->
