--- a/src/app/common/components/explicit-overlay/overlay.component.html
+++ b/src/app/common/components/explicit-overlay/overlay.component.html
@@ -1,8 +1,6 @@
 <div class="m-channel--explicit-overlay--container" *ngIf="!hidden">
   <div class="m-channel--explicit-overlay--content">
-    <h3>
-      This channel contains content that is NSFW
-    </h3>
+    <h3>{{ message }}</h3>
     <div
       class="m-btn m-btn--slim m-btn--action m-channel--explicit-overlay--action"
       (click)="disableFilter()"
