--- a/src/app/modules/onboarding-v2/steps/info/info.component.html
+++ b/src/app/modules/onboarding-v2/steps/info/info.component.html
@@ -70,7 +70,7 @@
       Skip
     </button>
     <button class="mf-button mf-button--alt" (click)="continue()" i18n>
-      Finish
+      Continue
     </button>
   </div>
 </div>
