Removed Remind and Boost buttons in closed groups #2586

--- a/src/app/modules/groups/profile/feed/sorted.component.html
+++ b/src/app/modules/groups/profile/feed/sorted.component.html
@@ -63,6 +63,8 @@
           (delete)="delete(entity)"
           [slot]="i + 1"
           [attr.data-minds-activity-guid]="entity.guid"
+          [disableBoosting]="group['membership'] === 0"
+          [disableReminding]="group['membership'] === 0"
         >
           <!-- Menu Actions -->
 
