(chore): #1351 - captcha bypass for e2e

--- a/src/app/modules/forms/register/register.html
+++ b/src/app/modules/forms/register/register.html
@@ -160,7 +160,7 @@
 
       <m-formInput__checkbox
         formControlName="tos"
-        data-cy="data-minds-accept-tos-input"
+        data-cy="minds-accept-tos-input"
       >
         I accept the
         <a routerLink="/p/terms" target="_blank"> Terms & Conditions </a>
