--- a/src/app/modules/media/view/view.component.html
+++ b/src/app/modules/media/view/view.component.html
@@ -325,7 +325,11 @@
   [url]="siteUrl + 'media/' + entity.guid"
   [title]="entity.title || ''"
   [embed]="entity"
-  *ngIf="entity && !attachment.shouldBeBlurred(entity)"
+  *ngIf="
+    entity &&
+    !attachment.shouldBeBlurred(entity) &&
+    !session.getLoggedInUser().hide_share_buttons
+  "
 >
 </m-social-icons>
 
