#2546 Pro UI unified tiles

--- a/src/app/common/components/rich-embed/rich-embed.html
+++ b/src/app/common/components/rich-embed/rich-embed.html
@@ -65,7 +65,7 @@
       {{src.title | excerpt}}
     </h2>
     <p class="m-blurb" *ngIf="src.blurb">{{src.blurb | excerpt: '300'}}</p>
-    <p class="m-url mdl-color-text--blue-grey-400">
+    <p class="m-url">
       {{src.perma_url | domain}}
     </p>
   </a>
