--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -9,7 +9,7 @@
         src="{{ cdnUrl }}icon/{{ comment.ownerObj.guid }}/small/{{
           comment.ownerObj.icontime
         }}"
-        class="mdl-shadow--2dp"
+        class="m-border"
       />
     </a>
   </div>
