--- a/src/app/modules/pro/channel/home/home.component.html
+++ b/src/app/modules/pro/channel/home/home.component.html
@@ -5,38 +5,21 @@
     (onSelectTag)="navigateToCategory($event)"
   ></m-pro--channel--categories>
 
-  <div class="m-proChannelHome__section" *ngIf="featuredContent?.length">
+  <div class="m-proChannelHome__section">
     <div
       class="m-proChannelHome__featuredContent"
       [class.m-proChannelHome__featuredContent--prominent]="false"
     >
-      <m-pro--channel-tile
-        *ngFor="let entity of featuredContent"
-        [entity]="entity"
-        (click)="onContentClick(entity)"
-      ></m-pro--channel-tile>
+      <m-proChannel__contentList
+        type="activities"
+        [limit]="12"
+        [canAutoScroll]="false"
+      >
+      </m-proChannel__contentList>
     </div>
   </div>
 
-  <div class="m-proChannelHome__section" *ngFor="let category of categories">
-    <h2 i18n>
-      <a [routerLink]="getCategoryRoute(category.tag?.tag)">{{
-        category.tag?.label
-      }}</a>
-    </h2>
-
-    <div class="m-proChannelHome__categoryContent">
-      <ng-container *ngFor="let entity$ of category?.content">
-        <m-pro--channel-tile
-          *ngIf="entity$ | async as entity"
-          [entity]="entity"
-          (click)="onContentClick(entity)"
-        ></m-pro--channel-tile>
-      </ng-container>
-    </div>
-  </div>
-
-  <div class="m-proChannelHome__loader" *ngIf="inProgress">
-    <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+  <div class="m-proChannelHome__section">
+    <m-proChannelHome__categoryContent></m-proChannelHome__categoryContent>
   </div>
 </div>
