--- a/src/app/modules/comments/comment/comment.component.scss
+++ b/src/app/modules/comments/comment/comment.component.scss
@@ -153,10 +153,12 @@
 }
 
 .m-comment .minds-avatar {
-  margin-top: 0;
+  margin-top: 2px;
 
   img {
     width: 36px;
+    height: 36px;
+    object-fit: cover;
   }
 }
 
