--- a/src/app/modules/comments/thread/thread.component.html
+++ b/src/app/modules/comments/thread/thread.component.html
@@ -137,7 +137,7 @@
 </span>
 
 <m-comment__poster
-  *ngIf="activityService.allowComment$ | async"
+  *ngIf="level === 0 && !inProgress && activityService.allowComment$ | async"
   [guid]="guid"
   [parent]="parent"
   [entity]="entity"
