--- a/src/app/modules/legacy/components/buttons/buttons.scss
+++ b/src/app/modules/legacy/components/buttons/buttons.scss
@@ -148,6 +148,18 @@ minds-button-remind {
   cursor: default;
 }
 
+.m-bgOverlay--v2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  cursor: default;
+  // pointer-events: none;
+}
+
 minds-button-comment a,
 minds-button-remind a {
   @include m-theme() {
